http://stackoverflow.com/questions/15126629/prevent-scrolling-out-of-cordovaview-in-cordova-for-windows-phone-8

--- a/less/mha.less
+++ b/less/mha.less
@@ -1,6 +1,12 @@
 // By Libern
 
 #MHA {
+  backface-visibility:hidden;
+  -webkit-backface-visibility:hidden;
+  overflow: hidden;
+  -ms-content-zooming: none;
+  -ms-touch-action:none;
+
   .bar-nav {
     background: transparent url(../images/navigation_bar_bg.png);
     border-bottom: none;
